--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,5 +26,7 @@ jobs:
         run: poetry install
       - name: Run tests
         run: poetry run pytest -vv --strict --showlocals
+      - name: Run homework_1 tests
+        run: poetry run pytest -vv --strict --showlocals tests/test_homework_1.py
       - name: Run lecture 4 tests
         run: poetry run pytest -vv --strict --showlocals --cov=lecture_4/demo_service ./tests/lecture_4/hw
