--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,9 @@ jobs:
         uses: abatilo/actions-poetry@v2
       - name: Install dependencies with poetry
         run: poetry install
-      - name: Run tests
-        run: poetry run pytest -vv --strict --showlocals
+      - name: Run tests hw1
+        run: poetry run pytest -vv --strict --showlocals ./tests/test_homework_1.py
+      - name: Run tests hw2
+        run: poetry run pytest -vv --strict --showlocals ./tests/test_homework_2.py
 #      - name: Run lecture 4 tests
 #        run: poetry run pytest -vv --strict --showlocals --cov=lecture_4/demo_service ./tests/lecture_4/hw
